<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/menu_screen_margin">

    <com.measuredsoftware.passvault.view.CondensedCheckedTextView
        android:id="@+id/obscure_passwords"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/menu_option_checkbox"
        android:text="@string/obscure_passwords"
        />

    <com.measuredsoftware.passvault.view.CondensedCheckedTextView
        android:id="@+id/capitalise_every_word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/menu_option_checkbox"
        android:text="@string/capitalise_every_word"
        />

    <com.measuredsoftware.passvault.view.CondensedCheckedTextView
        android:id="@+id/include_symbol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/menu_option_checkbox"
        android:text="@string/include_symbols"
        />

</LinearLayout>