<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_margin"
    android:paddingRight="@dimen/activity_margin"
    android:paddingTop="@dimen/activity_margin_small"
    android:paddingBottom="@dimen/activity_margin"
    >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.measuredsoftware.passvault.view.CondensedTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            style="@style/password_activity_title"
            android:id="@+id/title" />

        <Button
            android:text="@string/cancel"
            android:textColor="@color/tinted_button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:gravity="center"
            android:background="@android:color/transparent"
            android:id="@+id/cancel" />

        <Button
            android:text="@string/done"
            android:textColor="@color/tinted_button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:gravity="center"
            android:background="@android:color/transparent"
            android:id="@+id/done" />

    </FrameLayout>

    <com.measuredsoftware.passvault.view.CondensedEditText
        android:id="@+id/name"
        android:hint="@string/name_hint"
        style="@style/edit_text"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:gravity="center_horizontal"
        android:autoText="false"
        android:inputType="textCapWords" />

    <com.measuredsoftware.passvault.view.CondensedEditText
        android:id="@+id/password"
        android:hint="@string/password_hint"
        style="@style/edit_text"
        android:layout_marginTop="@dimen/edit_text_padding"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:gravity="center_horizontal"
        android:inputType="textNoSuggestions"
        android:singleLine="true"
        android:autoText="false"
        />

    <com.measuredsoftware.passvault.view.GeneratorSection
        android:id="@+id/generator_section"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/generator_section_gap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.measuredsoftware.passvault.view.CondensedTextView
            android:text="@string/auto_generate"
            android:textColor="@color/heading_colour"
            android:textSize="@dimen/edit_text_size"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.measuredsoftware.passvault.view.CondensedTextView
            android:id="@+id/password_length_text"
            android:textColor="@color/password_length_colour"
            android:textSize="@dimen/edit_text_size"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.measuredsoftware.passvault.view.PasswordLengthSlider
            android:id="@+id/password_length_slider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/slider_margin_top"
            android:layout_marginBottom="@dimen/slider_margin_bottom"
            />

        <com.measuredsoftware.passvault.view.PasswordRandomizerView
            android:id="@+id/password_randomizer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.measuredsoftware.passvault.view.GeneratorSection>


</LinearLayout>