<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.measuredsoftware.passvault.MainActivity"
    android:id="@+id/sliding_drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.measuredsoftware.passvault.view.TitleBar
            android:layout_width="match_parent"
            android:layout_height="@dimen/header_height"
            android:paddingLeft="@dimen/activity_margin_small"
            android:paddingRight="@dimen/activity_margin_small"
            android:paddingTop="@dimen/activity_margin_small"
            android:paddingBottom="@dimen/activity_margin_small">

            <com.measuredsoftware.passvault.view.PressImageButton
                android:id="@+id/menu_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="left|center_vertical"
                android:background="@android:color/transparent"
                android:src="@drawable/menu_icon"
                android:contentDescription="@string/menu_button_desc" />

            <com.measuredsoftware.passvault.view.PressImageButton
                android:id="@+id/edit_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right|center_vertical"
                android:background="@android:color/transparent"
                android:src="@drawable/edit_icon"
                android:contentDescription="@string/edit_button_desc" />

            <com.measuredsoftware.passvault.view.CondensedTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="@dimen/title_text_size"
                android:textColor="@color/title_colour"
                android:layout_gravity="center" />
        </com.measuredsoftware.passvault.view.TitleBar>

        <com.measuredsoftware.passvault.view.BackgroundContainer
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/list_background">

            <com.measuredsoftware.passvault.view.PasswordList
                android:id="@+id/password_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <com.measuredsoftware.passvault.view.PasswordPopup
                android:id="@+id/password_popup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible" />

            <com.measuredsoftware.passvault.view.AddArrow
                android:id="@+id/add_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:visibility="invisible"/>

        </com.measuredsoftware.passvault.view.BackgroundContainer>

        <com.measuredsoftware.passvault.view.FooterBar
            android:layout_width="match_parent"
            android:layout_height="@dimen/footer_height">

            <com.measuredsoftware.passvault.view.PressImageButton
                android:id="@+id/add_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:background="@android:color/transparent"
                android:padding="@dimen/activity_margin"
                android:src="@drawable/add_icon" />

        </com.measuredsoftware.passvault.view.FooterBar>

    </LinearLayout>

    <com.measuredsoftware.passvault.view.MenuScreen
        android:id="@+id/menu_screen"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start" />
</android.support.v4.widget.DrawerLayout>